# kursovarobota

./: Admin.cpp  Admin.h  AssignmentManager.cpp  AssignmentManager.h  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  FileConstants.cpp  FileConstants.h  IPrint.cpp  IPrint.h  MenuManager.cpp  MenuManager.h  Person.cpp  Person.h  README.md  Student.cpp  Student.h  Subject.cpp  Subject.h  Teacher.cpp  Teacher.h  UserManager.cpp  UserManager.h  main.cpp
